--- a/NuGet.Cloud.targets
+++ b/NuGet.Cloud.targets
@@ -30,11 +30,12 @@
 			$(PublishDependsOn);
 			OctopusPackage
 		</PublishDependsOn>
+		<PackageSpec>$(MSBuildProjectDirectory)\$(MSBuildProjectName).nuspec</PackageSpec>
 	</PropertyGroup>
-	<Target Name="OctopusPackage" Condition="'$(NuGetExePath)' != ''">
+	<Target Name="OctopusPackage" Condition="'$(NuGetExePath)' != '' And Exists('$(PackageSpec)')">
 		<PropertyGroup>
 			<PackageOutputDir Condition="$(PackageOutputDir) == ''">$(MSBuildProjectDirectory)\$(PublishDir.Trim('\\'))</PackageOutputDir>
-			<PackCommand>"$(NuGetExePath)" pack "$(MSBuildProjectDirectory)\$(MSBuildProjectName).nuspec" -Properties "Configuration=$(Configuration);Platform=$(Platform);SemanticVersion=$(SemanticVersion);SimpleVersion=$(SimpleVersion);BuildMachine=$(BuildMachine);BuildUser=$(BuildUser);Branch=$(Branch);Commit=$(Commit);BuildDateUtc=$(BuildDateUtc)" -Version $(SemanticVersion) -NonInteractive -OutputDirectory "$(PackageOutputDir)"</PackCommand>
+			<PackCommand>"$(NuGetExePath)" pack "$(PackageSpec)" -Properties "Configuration=$(Configuration);Platform=$(Platform);SemanticVersion=$(SemanticVersion);SimpleVersion=$(SimpleVersion);BuildMachine=$(BuildMachine);BuildUser=$(BuildUser);Branch=$(Branch);Commit=$(Commit);BuildDateUtc=$(BuildDateUtc);TargetEnvironment=$(TargetEnvironment)" -Version $(SemanticVersion) -NonInteractive -OutputDirectory "$(PackageOutputDir)"</PackCommand>
 		</PropertyGroup>
 		<Message Text="Building Octopus Package..." Importance="high" />
 		<Exec Command="$(PackCommand)" />
