Added some JSON-LD!

--- a/src/NuGet.Services.Gateway/NuGet.Services.Gateway.csproj
+++ b/src/NuGet.Services.Gateway/NuGet.Services.Gateway.csproj
@@ -65,7 +65,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
-    <Content Include="Public\Services.json" />
+    <None Include="Public\Services.json" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Web.config">
@@ -80,6 +80,9 @@
     <Content Include="Startup.cmd">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Public\Context.jsonld" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -104,6 +107,7 @@
           <SaveServerSettingsInUserFile>False</SaveServerSettingsInUserFile>
         </WebProjectProperties>
       </FlavorProperties>
+      <UserProperties Public_2Services_1json__JSONSchema="" />
     </VisualStudio>
   </ProjectExtensions>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
