--- a/src/NuGet.Services.Gateway/Web.config
+++ b/src/NuGet.Services.Gateway/Web.config
@@ -8,7 +8,7 @@
         <compilation debug="true" targetFramework="4.5" />
         
         <!-- DISABLE ASP.Net for this application. If we add any code, we need to turn this back on!! -->
-        <httpRuntime targetFramework="4.5" enable="false" />
+        <httpRuntime targetFramework="4.5" enable="true" />
     </system.web>
     <system.webServer>
         <httpProtocol>
@@ -26,11 +26,21 @@
                 <add name="X-Frame-Options" value="deny" />
             </customHeaders>
         </httpProtocol>
+        <staticContent>
+            <mimeMap fileExtension="jsonld" mimeType="application/ld+json" />
+        </staticContent>
         <rewrite>
             <rules>
                 <rule name="Service Index" stopProcessing="true">
-                    <match url="^/*$" />
-                    <action type="Rewrite" url="/Public/Services.json" />
+                    <match url="^$" />
+                    <action type="Rewrite" url="Public/Services.json" />
+                </rule>
+                <rule name="Other Static Files" stopProcessing="true">
+                    <match url="^(.*)$" />
+                    <conditions>
+                        <add input="{APPL_PHYSICAL_PATH}Public\{R:1}" matchType="IsFile" />
+                    </conditions>
+                    <action type="Rewrite" url="Public/{R:1}" />
                 </rule>
                 <rule name="Search Service" stopProcessing="true">
                     <match url="^search(/?.*)$" />
@@ -46,10 +56,7 @@
                 </rule>
 
                 <!-- Don't go to the normal IIS processing if the URL Rewrites fail -->
-                <rule name="Fallthrough" stopProcessing="true">
-                    <match url="^.*$"/>
-                    <action type="CustomResponse" statusCode="404" subStatusCode="0" statusReason="Not Found"/>
-                </rule>
+                
             </rules>
             <rewriteMaps>
                 <rewriteMap name="MapScheme" defaultValue="http">
@@ -59,4 +66,13 @@
             </rewriteMaps>
         </rewrite>
     </system.webServer>
+    <location path="Public/Services.json">
+        <system.webServer>
+            <httpProtocol>
+                <customHeaders>
+                    <add name="Link" value="&lt;Context.jsonld&gt;; rel=&quot;http://www.w3.org/ns/json-ld#context&quot;; type=&quot;application/ld+json&quot;"/>
+                </customHeaders>
+            </httpProtocol>
+        </system.webServer>
+    </location>
  </configuration>
