Added some code *gasp* to rewrite web.config on start

--- a/src/NuGet.Services.Gateway/NuGet.Services.Gateway.csproj
+++ b/src/NuGet.Services.Gateway/NuGet.Services.Gateway.csproj
@@ -15,7 +15,7 @@
     <RootNamespace>NuGet.Services.Gateway</RootNamespace>
     <AssemblyName>NuGet.Services.Gateway</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <UseIISExpress>false</UseIISExpress>
+    <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
@@ -99,7 +99,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>51377</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost/NuGet.Services.Gateway</IISUrl>
+          <IISUrl>http://localhost:51377/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
