Changing to using the startup task to unlock the proxy

--- a/src/NuGet.Services.Gateway/Web.config
+++ b/src/NuGet.Services.Gateway/Web.config
@@ -44,15 +44,15 @@
                 </rule>
                 <rule name="Search Service" stopProcessing="true">
                     <match url="^search(/?.*)$" />
-                    <action type="Rewrite" url="{MapScheme:{HTTPS}}://api-search-0.nuget.org/search{R:1}" />
+                    <action type="Rewrite" url="{MapScheme:{HTTPS}}://api-search-0.dev.nugettest.org/search{R:1}" />
                 </rule>
                 <rule name="Work Service" stopProcessing="true">
                     <match url="^work(/?.*)$" />
-                    <action type="Rewrite" url="{MapScheme:{HTTPS}}://api-work-0.nuget.org/work{R:1}" />
+                    <action type="Rewrite" url="{MapScheme:{HTTPS}}://api-work-0.dev.nugettest.org/work{R:1}" />
                 </rule>
                 <rule name="V2Feed Service" stopProcessing="true">
                     <match url="^api/v2(/?.*)$" />
-                    <action type="Rewrite" url="{MapScheme:{HTTPS}}://www.nuget.org/api/v2{R:1}" />
+                    <action type="Rewrite" url="{MapScheme:{HTTPS}}://dev.nugettest.org/api/v2{R:1}" />
                 </rule>
             </rules>
             <rewriteMaps>
@@ -62,6 +62,7 @@
                 </rewriteMap>
             </rewriteMaps>
         </rewrite>
+        <proxy enabled="true" />
     </system.webServer>
     <location path="Public/Services.json">
         <system.webServer>
